Configure CRD short name and custom columns

--- a/deploy/crds/control_v1alpha1_managednamespace_crd.yaml
+++ b/deploy/crds/control_v1alpha1_managednamespace_crd.yaml
@@ -9,6 +9,13 @@ spec:
     listKind: ManagedNamespaceList
     plural: managednamespaces
     singular: managednamespace
+    shortNames:
+    - mns
+  additionalPrinterColumns:
+  - name: Description
+    type: string
+    description: The description of the ManagedNamespace
+    JSONPath: .spec.description
   scope: Namespaced
   subresources:
     status: {}
