Update deploy yaml files

--- a/deploy/crds/control_v1alpha1_managednamespace_cr.yaml
+++ b/deploy/crds/control_v1alpha1_managednamespace_cr.yaml
@@ -3,5 +3,4 @@ kind: ManagedNamespace
 metadata:
   name: example-managednamespace
 spec:
-  # Add fields here
-  size: 3
+  description: This is the first test project
