--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -7,28 +7,7 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - pods
-  - services
-  - endpoints
-  - persistentvolumeclaims
-  - events
-  - configmaps
-  - secrets
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
-  - namespaces
-  verbs:
-  - get
-- apiGroups:
-  - apps
-  resources:
-  - deployments
-  - daemonsets
-  - replicasets
-  - statefulsets
+  - namespace
   verbs:
   - '*'
 - apiGroups:
@@ -38,14 +17,6 @@ rules:
   verbs:
   - get
   - create
-- apiGroups:
-  - apps
-  resourceNames:
-  - cdays-namespace-poc
-  resources:
-  - deployments/finalizers
-  verbs:
-  - update
 - apiGroups:
   - control.appuio.ch
   resources:
