--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -15,8 +15,7 @@ spec:
       serviceAccountName: cdays-namespace-poc
       containers:
         - name: cdays-namespace-poc
-          # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: docker.io/vshn/cdays:namespace-operator
           command:
           - cdays-namespace-poc
           imagePullPolicy: Always
