--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -7,9 +7,15 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - namespace
+  - configmaps
   verbs:
   - '*'
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
 - apiGroups:
   - monitoring.coreos.com
   resources:
@@ -21,5 +27,17 @@ rules:
   - control.appuio.ch
   resources:
   - '*'
+  verbs:
+  - '*'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cdays-namespace-poc
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - namespaces
   verbs:
   - '*'
