--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,43 +1,36 @@
+kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
 metadata:
-  creationTimestamp: null
-  name: cdays-namespace-poc
+  name: namespace-operator
 rules:
 - apiGroups:
   - ""
   resources:
-  - configmaps
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
   - pods
+  - configmaps
+  - services
+  - namespaces
   verbs:
-  - get
+  - "*"
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  - daemonsets
+  - replicasets
+  - statefulsets
+  verbs:
+  - "*"
 - apiGroups:
   - monitoring.coreos.com
   resources:
   - servicemonitors
   verbs:
-  - get
-  - create
+  - "get"
+  - "create"
 - apiGroups:
   - control.appuio.ch
   resources:
   - '*'
-  verbs:
-  - '*'
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: cdays-namespace-poc
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - namespaces
   verbs:
   - '*'
